# MathRAG-THPT

./: .gitignore  README.md  compose.yaml  package.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_users_and_roles.py  0003_normalize_exam_data.py
backend/app/: __init__.py  container.py  main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  security.py
backend/app/db/: __init__.py  models.py  repositories.py  session.py
backend/app/ingestion/: __init__.py  cli.py  models.py
backend/app/ingestion/chunkers/: __init__.py  semantic.py
backend/app/ingestion/indexers/: __init__.py  pipeline.py
backend/app/ingestion/loaders/: __init__.py  local.py
backend/app/ingestion/normalizers/: __init__.py  text.py
backend/app/ingestion/parsers/: __init__.py  documents.py  exams.py
backend/app/schemas/: __init__.py  admin.py  api.py  auth.py  exams.py
backend/app/services/auth/: service.py
backend/app/services/documents/: __init__.py  admin.py
backend/app/services/exams/: __init__.py  parser.py  service.py
backend/app/services/llm/: __init__.py  base.py  ollama.py
backend/app/services/quiz/: __init__.py  service.py
backend/scripts/: migrate.py  sync_admin.py
backend/tests/evaluation/: questions.json
backend/tests/integration/: test_api.py
backend/tests/unit/: test_chunker.py  test_citations.py  test_exam_parser.py  test_formula.py  test_fusion.py  test_policy.py
docs/: api.md  architecture.md  (+3 more)
(+65 files in other folders)
