[project]
name = "mathrag-thpt-backend"
version = "0.1.0"
description = "Grounded Vietnamese mathematics learning assistant"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14,<2",
  "beautifulsoup4>=4.12,<5",
  "faiss-cpu>=1.9,<2",
  "fastapi>=0.115,<1",
  "email-validator>=2.2,<3",
  "httpx>=0.28,<1",
  "pyjwt>=2.10,<3",
  "numpy>=1.26,<3",
  "pwdlib[argon2]>=0.2,<1",
  "pydantic-settings>=2.7,<3",
  "pymupdf>=1.25,<2",
  "python-docx>=1.1,<2",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy>=2.0,<3",
  "typer>=0.15,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
rag = [
  "sentence-transformers>=3.3,<4",
]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[project.scripts]
mathrag-ingest = "app.ingestion.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
